; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby-digest/src/extr_digest.c_mrb_digest_digest_bang.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby-digest/src/extr_digest.c_mrb_digest_digest_bang.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mrb_md = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @mrb_digest_digest_bang to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mrb_digest_digest_bang(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.mrb_md*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = call i64 @DATA_PTR(i32 %7)
  %9 = inttoptr i64 %8 to %struct.mrb_md*
  store %struct.mrb_md* %9, %struct.mrb_md** %6, align 8
  %10 = load %struct.mrb_md*, %struct.mrb_md** %6, align 8
  %11 = icmp ne %struct.mrb_md* %10, null
  br i1 %11, label %14, label %12

12:                                               ; preds = %2
  %13 = call i32 (...) @mrb_nil_value()
  store i32 %13, i32* %3, align 4
  br label %18

14:                                               ; preds = %2
  %15 = load i32*, i32** %4, align 8
  %16 = load %struct.mrb_md*, %struct.mrb_md** %6, align 8
  %17 = call i32 @lib_md_digest_bang(i32* %15, %struct.mrb_md* %16)
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %14, %12
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i64 @DATA_PTR(i32) #1

declare dso_local i32 @mrb_nil_value(...) #1

declare dso_local i32 @lib_md_digest_bang(i32*, %struct.mrb_md*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
